force-app/main/default/objects/Car__c/Car__c.object-meta.xml
<CustomObject>
    <label>Car</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Car Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cars</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>