force-app/main/default/objects/Car__c/fields/date_of_inspection__c.field-meta.xml
<CustomField>
    <fullName>date_of_inspection__c</fullName>
    <label>Date of inspection</label>
    <type>Date</type>
</CustomField>