force-app/main/default/objects/Car__c/fields/engine_power__c.field-meta.xml
<CustomField>
    <fullName>engine_power__c</fullName>
    <label>Power</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>