force-app/main/default/objects/Car__c/fields/Purchase_price__c.field-meta.xml
<CustomField>
    <fullName>Purchase_price__c</fullName>
    <label>Purchase price</label>
    <precision>9</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>