force-app/main/default/objects/Car__c/fields/year_of_production__c.field-meta.xml
<CustomField>
    <fullName>year_of_production__c</fullName>
    <label>Year of production</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>