force-app/main/default/objects/Car__c/validationRules/ValidationDateInspection.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidationDateInspection</fullName>
    <active>true</active>
    <description>date of inspection is after today</description>
    <errorConditionFormula>date_of_inspection__c &lt; TODAY()</errorConditionFormula>
    <errorMessage>date of inspection must be after today</errorMessage>
</ValidationRule>