force-app/main/default/objects/Car__c/listViews/CarView.listView-meta.xml
<ListView>
    <fullName>CarView</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>date_of_inspection__c</columns>
    <columns>Fuel__c</columns>
    <columns>Mileage__c</columns>
    <filterScope>Mine</filterScope>
    <label>CarView</label>
</ListView>